[package]
name = "PartitionLink"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
ahash = "0.8.11"
anyhow = { version = "1.0.86", features = ["std", "backtrace"] }
async-trait = "0.1.81"
bytes = { version = "1.7.1", features = ["std", "serde"] }
env_logger = "0.11.5"
jni = "0.21.1"
log = "0.4.22"
prost = { version = "0.13.1", features = ["derive", "std"] }
prost-types = "0.13.2"
protobuf = "2"
r2d2 = "0.8.10"
raft = "0.7.0"
serde = { version = "1.0.208", features = ["std", "derive", "serde_derive"] }
serde_json = "1.0.125"
socket2 = "0.5.7"
tokio = { version = "1.39.2", features = ["full"] }
tokio-context = "0.1.3"
uuid = { version = "1.10.0", features = ["v4"] }

[build-dependencies]
prost-build = "0.13.1"
